// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> basic rendering renders correctly with valid props 1`] = `
<Material UI Box
  width="100%"
>
  <AsteroidTopBar
    tabs={
      TabArray {
        "tabs": Array [
          TabObject {
            "name": "Testing Tab 1",
            "subtabs": Array [
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 1",
              },
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 2",
              },
            ],
          },
          TabObject {
            "name": "Testing Tab 2",
            "subtabs": Array [
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 3",
              },
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 4",
              },
            ],
          },
        ],
      }
    }
  />
  <NoOpenTab />
</Material UI Box>
`;

exports[`<App /> basic rendering throws an error with invalid props 1`] = `"Unable to render the <App> component: invalid props. This is likely an issue with the server and not your browser."`;

exports[`<App /> location-based rendering renders a 404 for a location not included in the tabs prop 1`] = `
<Material UI Box
  width="100%"
>
  <AsteroidTopBar
    tabs={
      TabArray {
        "tabs": Array [
          TabObject {
            "name": "Testing Tab 1",
            "subtabs": Array [
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 1",
              },
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 2",
              },
            ],
          },
          TabObject {
            "name": "Testing Tab 2",
            "subtabs": Array [
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 3",
              },
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 4",
              },
            ],
          },
        ],
      }
    }
  />
  <NoMatchedTab />
</Material UI Box>
`;

exports[`<App /> location-based rendering renders correctly at a location included in the tabs prop 1`] = `
<Material UI Box
  width="100%"
>
  <AsteroidTopBar
    tabs={
      TabArray {
        "tabs": Array [
          TabObject {
            "name": "Testing Tab 1",
            "subtabs": Array [
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 1",
              },
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 2",
              },
            ],
          },
          TabObject {
            "name": "Testing Tab 2",
            "subtabs": Array [
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 3",
              },
              SubTabObject {
                "component": [Function],
                "name": "Testing Subtab 4",
              },
            ],
          },
        ],
      }
    }
  />
  <div>
    TestingSubtab3Component
  </div>
</Material UI Box>
`;
